# llm-task-manager

./: Cargo.toml  LICENSE  README.md
migrations/: 00001_create_tasks_table.sql
src/: main.rs  telegram_bot.rs
src/data/: flow.rs  mod.rs  task.rs
src/db/: interface.rs  mod.rs
src/db/task/: mod.rs
src/domain/task/: flow.rs  mod.rs  model.rs  service.rs
src/execution/: mod.rs
src/input/: mod.rs
src/input/parsing_pipeline/: mod.rs
src/input/parsing_pipeline_steps/: execution.rs  intent.rs  mod.rs  params.rs
src/llm/backend/: openai.rs
src/llm/interface/: mod.rs
src/transcription/backend/: openai.rs
src/transcription/interface/: mod.rs
